[package]
name = "cloudops"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cps"
path = "src/main.rs"

[dependencies]
aws-config = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-types = "0.9.0"
aws-smithy-http = "0.39.0"
aws-smithy-types = "0.39.0"
tracing = "0.1.32"
camino = "1.0.7"
http = "0.2.1"
const_format = "0.2.22"
tabled = "0.5.0"

[dependencies.tracing-subscriber]
version = "0.3.9"
features = ["env-filter", "local-time" ]

[dependencies.clap]
version = "3.1.6"
features = ["derive", "env"]

[dependencies.tokio]
version = "1.17.0"
features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "time"]
